# kayak

./: .gitignore  .test.env  admining.py  cruds.py  graph.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py  templ.py
auth/: __init__.py  auth.py
auth_utils/: __init__.py  utils.py
static/: styles.css
templates/: add-option.html  administrate.html  approve-options.html  base.html  create-user.html  login.html  rank-variants.html  ranked-data.html
